# predicting-results-on-unseen-tasks

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: tests.yml
notebooks/: JHR_EDA.ipynb
scripts/: fetch.py
src/predicting_unseen_tasks/: directories.py  fetch_data.py
src/tests/: test_fetch_data.py
